--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>General Quiz</h1>
+    <h1>Adithiya, Prakash, Rahul and Sai Suhas </h1>
     <div id="mark"></div>
     <h3>Which is the smallest ocean in the world?</h3>
     <div class="options">
